--- a/HTML/Assignments.html
+++ b/HTML/Assignments.html
@@ -6,7 +6,7 @@
 </head>
 <body onload="init()">
 <ul id="tabs">
-    <li><a href="index.html">Home</a></li>
+    <li><a href="../index.html">Home</a></li>
     <li><a href="assignments.html">Assignments</a></li>
 </ul>
 <div class="pageAssignments">
