--- a/HTML/hello.html
+++ b/HTML/hello.html
@@ -7,7 +7,7 @@
 </head>
 <body onload="init()">
 <ul id="tabs">
-    <li><a href="index.html">Home</a></li>
+    <li><a href="../index.html">Home</a></li>
     <li><a href="assignments.html">Assignments</a></li>
 </ul>
     <h1>Hello, World! </h1>
