--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Net-Centric Computing</title>
-    <script src="../JS/tabs.js"></script>
+    <script src="JS/tabs.js"></script>
 </head>
 <body onload="init()">
 <ul id="tabs">
-    <li><a href="index.html">Home</a></li>
-    <li><a href="assignments.html">Assignments</a></li>
+    <li><a href="../index.html">Home</a></li>
+    <li><a href="HTML/assignments.html">Assignments</a></li>
 </ul>
     <div id="gitHubLoc">
         <h1>Welcome to my website for Net-Centric Computing.</h1>
@@ -16,5 +16,5 @@
     </div>
 </body>
 </html>
-<link rel="stylesheet" href="../CSS/tabs.css">
-<link rel="stylesheet" href="../CSS/index.css">
+<link rel="stylesheet" href="CSS/tabs.css">
+<link rel="stylesheet" href="CSS/index.css">
