Adds assignment 3 as pdf under assignments tabs

--- a/HTML/Assignments.html
+++ b/HTML/Assignments.html
@@ -15,6 +15,7 @@
 <ul id="listAssignments">
     <li id="item1"><a href="hello.html">Hello, World!</a></li>
     <li id="item2"><a href="advertisement.html">Advertisement</a></li>
+    <li id="item3"><a href="../DOCS/tabscss.pdf">CSS Assignment</a></li>
 </ul>
 </div>
 <script src="../JS/tabs.js"></script>
