Adds jQuery Effects Assignment

--- a/HTML/Assignments.html
+++ b/HTML/Assignments.html
@@ -16,6 +16,7 @@
     <li id="item1"><a href="hello.html">Hello, World!</a></li>
     <li id="item2"><a href="advertisement.html">Advertisement</a></li>
     <li id="item3"><a href="../DOCS/tabscss.pdf">CSS Assignment</a></li>
+    <li id="item4"><a href="jQueryProject.html">jQuery Effects Assignment (Tic- Tac-Toe) </a><li>
 </ul>
 </div>
 <script src="../JS/tabs.js"></script>
