Adds tie game, and fixes elements loading before the page is ready.

--- a/HTML/jQueryProject.html
+++ b/HTML/jQueryProject.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <title>Tic-Tac-Toe</title>
 </head>
-<body onload="init()">
+<body onload="init()" id="ticTac">
+<link rel="stylesheet" href="../CSS/tabs.css">
+<link rel="stylesheet" href="../CSS/jQueryProject.css">
+<script src="../JS/tabs.js"></script>
+<script src="../JS/jquery-1.12.1.min.js"></script>
+<script src="../JS/jQueryProject.js"></script>
 <ul id="tabs">
     <li><a href="../index.html">Home</a></li>
     <li><a href="assignments.html">Assignments</a></li>
@@ -98,11 +103,8 @@
         </div>
     <div id="winO">O's WIN!!!</div>
     <div id="winX">X's WIN!!!</div>
+    <div id="tie">Tie Game</div>
 </div>
 </body>
-<script src="../JS/tabs.js"></script>
-<script src="../JS/jquery-1.12.1.min.js"></script>
-<script src="../JS/jQueryProject.js"></script>
 </html>
-<link rel="stylesheet" href="../CSS/tabs.css">
-<link rel="stylesheet" href="../CSS/jQueryProject.css">
+
