Adds database assignment page

--- a/HTML/Assignments.html
+++ b/HTML/Assignments.html
@@ -17,6 +17,7 @@
     <li id="item2"><a href="advertisement.html">Advertisement</a></li>
     <li id="item3"><a href="../DOCS/tabscss.pdf">CSS Assignment</a></li>
     <li id="item4"><a href="jQueryProject.html">jQuery Effects Assignment (Tic- Tac-Toe) </a><li>
+    <li id="item5"><a href="databaseCivilWar.html">Shady Database Assignment </a><li>
 </ul>
 </div>
 <script src="../JS/tabs.js"></script>
